--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>MY APP</title>
+    <title>Star Wars Quote App</title>
   </head>
   <body>
     <h1>May Node and Express be with you.</h1>
